# diploma_esm

./: .gitignore  README.md  pyproject.toml
scripts/: annual_mean.py  lab1.py  plot_module.py  temp_avg_minus_zonmean.py
