[tool.poetry]
name = "esm"
version = "0.1.0"
description = ""
authors = ["Nathasya Christien <nathasya.abenita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.4.2"
matplotlib = "^3.10.8"
xarray = "^2026.2.0"
pandas = "^3.0.1"
ipykernel = "^7.2.0"
netcdf4 = "^1.7.4"
cartopy = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
